--- a/app/styles/scss/layout/_main.scss
+++ b/app/styles/scss/layout/_main.scss
@@ -1,16 +1,80 @@
-#main {
-    width: 100%;
-    height: 200px;
+body, html {
+    height: 100%;
+}
+
+#wrapper {
     display: flex;
-    flex-direction: row-reverse;
-    & div {
-        width: 100px;
-        height: 100px;
-        border: 1px solid #000;
-        flex-grow: 1;
+    height: 100%;
+
+    #sidebar {
+        background: #292929;
+        border: 1px solid #292929;
+        height: 100%;
+        width: 250px;
+        flex-direction: column;
+
+        ul {
+            list-style: none;
+
+            li {
+                padding: 15px;
+                a {
+                    color: #fff;
+                    text-decoration: none;
+                    font-size: 16px;
+                }
+                &:hover {
+                    background: #222222;
+                }
+            }
+            .user {
+                h4 {
+                    color: #fff;
+                    text-align: center;
+                }
+                &:hover {
+                    background: #292929;
+                }
+            }
+        }
     }
-    & div:nth-child(3) {
-        flex-grow: 3;
-        background: red;
+    #main {
+        flex: 1;
+        flex-direction: row;
+        #header {
+            flex: 1;
+            flex-direction: row;
+            height: 65px;
+            background: #dedede;
+            h3 {
+                color: #292929;
+                font-size: 20px;
+                padding: 13px;
+            }
+        }
+        #content {
+            margin-top: 50px;
+            display: flex;
+            .panel {
+                flex: 1;
+                margin: 0 25px;
+                padding: 10px;
+                border: 1px solid #292929;
+                .panel-heading {
+                    border-bottom: 1px solid #dedede;
+                }
+                .panel-body {
+                    margin: 5px 0 0 0;
+                    text-align: justify;
+                    form {
+                        input {
+                            flex-direction: row;
+                            width: 100%;
+                            flex-wrap: wrap;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
